UI font size change.

--- a/olig_gui_tabs_edit.ui
+++ b/olig_gui_tabs_edit.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1268</width>
-    <height>815</height>
+    <width>760</width>
+    <height>529</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>760</width>
+    <height>529</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -17,7 +23,7 @@
    <bool>true</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">font: 8pt &quot;Calibri&quot;;</string>
+   <string notr="true">font: 12pt &quot;Calibri&quot;;</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0" colspan="5">
@@ -281,6 +287,7 @@
     </widget>
    </item>
   </layout>
+  <zorder>Nonchains</zorder>
   <zorder>close_button</zorder>
   <zorder>label_3</zorder>
   <zorder>line_2</zorder>
@@ -303,7 +310,6 @@
   <zorder>Prox_check</zorder>
   <zorder>Fingerprint_button</zorder>
   <zorder>line_4</zorder>
-  <zorder>Nonidenticalchains</zorder>
  </widget>
  <resources/>
  <connections/>
